Try fix open select2 on iOs

--- a/src/blocks/components/select/select.scss
+++ b/src/blocks/components/select/select.scss
@@ -1,6 +1,5 @@
 .select {
     width: 100%;
-    visibility: hidden;
 }
 
 .select2-container--verhouse, {
